# aurora-trading-research

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
config/: settings.example.yaml  strategy_schema.yaml
data/optimization/: optimization_proposal.json
data/paper_ledger/: execution_log.jsonl
docs/: ALPACA_PAPER_ADAPTER.md  GITHUB_RELEASE_v3.md  LSEG_DATA_SOURCE.md  PAPER_BROKER_INTEGRATION.md  RELEASE_CHECKLIST.md  RESEARCH_PHILOSOPHY.md  SAFETY.md
examples/: README.md
examples/strategies/: ml_signal_example.yaml  momentum_example.yaml  moving_average_crossover_example.yaml
src/aurora/: __init__.py
src/aurora/analysis/: monte_carlo.py  paper_performance.py  scenario_stress.py  sensitivity.py
src/aurora/backtesting/: __init__.py  engine.py  exceptions.py  metrics.py  portfolio_backtest.py  trades.py
src/aurora/brokers/: __init__.py  alpaca_adapter.py  base.py  (+5 more)
tests/: __init__.py  test_adaptive_optimizer.py  test_alpaca_adapter.py  test_archetypes_extended.py  test_artifact_diff.py  test_artifact_packet.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_trades.py  test_bayesian_optimizer.py  test_broker_costs.py  test_broker_stubs.py  test_build_features.py  test_commission.py  test_config.py  test_cpcv.py  test_dashboard.py  test_data_cache.py  test_data_normalize.py  test_data_quality.py  test_demo_workflow.py  test_deployment_checklist.py  test_e2e_local_artifact_workflow.py  test_ensemble.py  test_execution_models.py  test_feature_metadata.py  test_features_indicators.py  test_fill_simulator.py  test_fred_source.py  test_genetic_optimizer.py  test_intraday_data.py  test_kill_switch.py  test_latency.py  test_leakage_detector.py  test_ledger.py  test_lseg_client.py  test_lseg_source.py  test_ml_signal_strategy.py  test_model_labels.py  test_model_prediction.py  (+53 more)
(+141 files in other folders)
