[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-trading-research"
version = "0.1.0"
description = "Research-first platform for ML-assisted trading strategy validation with strict risk controls."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AURORA Contributors" }
]
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "yfinance",
  "pyyaml",
  "python-dotenv",
  "typer",
  "streamlit",
  "matplotlib",
  "pytest",
  "rich",
]

[project.scripts]
aurora = "aurora.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
